ingress/ingress-manifest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: my-app-service.test.svc.cluster.local  # FQDN format
            port:
              number: 80
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: my-app-service.prod.svc.cluster.local  # FQDN format
            port:
              number: 80
